# rust-yew-axum-tauri-desktop

./: .gitignore  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/frontend/: Cargo.toml  index.html  tailwind.config.js
crates/frontend/public/: tauri.js
crates/frontend/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/capabilities/: desktop.json  migrated.json
crates/tauri/src/: lib.rs  main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
