[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tower-http = { version = "0.2", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1"

types = { path = "../types" }